<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:text="@string/result" />

        <TextView
            android:id="@+id/gula_text"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="16dp"
            android:text="@string/gula" />

        <TextView
            android:id="@+id/carbo_text"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="16dp"
            android:text="@string/carbo" />

        <TextView
            android:id="@+id/lemak_total_text"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:text="@string/lemak_total" />
        <TextView
            android:id="@+id/protein_text"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="16dp"
            android:text="@string/protein" />

        <TextView
            android:id="@+id/saran_text"
            android:layout_width="358dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:text="@string/saran"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>