<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/background_primary_color"
    tools:context=".view.BaseActivity">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="180dp"
        android:src="@drawable/ic_logo"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@android:color/white"
        card_view:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_view_scan_sugar_levels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_sugar_levels"
                android:textSize="27sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="30dp"
                android:textStyle="bold"
                android:textColor="@color/secondary_text_color"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:background="@drawable/all_buttons"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:textColor="@color/primary_color"
                android:layout_marginTop="16dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
