<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    tools:context=".view.ScanTutorialActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_tutorial_description"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="4dp">

            <ImageView
                android:id="@+id/imagePreview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/example1"
                android:background="@drawable/rounded_border_background" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="4dp">

            <ImageView
                android:id="@+id/imagePreview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:background="@drawable/rounded_border_background"
                android:src="@drawable/example2" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/scanButton"
        android:layout_width="237dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/Scan"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/ready_to_start"
        android:textSize="14sp" />

</LinearLayout>
